global spacing and type fixes

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -66,7 +66,7 @@ blockquote {
 }
 
 .small-header {
-    margin-bottom: 1rem;
+    margin-bottom: 0.6rem;
     font-size: 0.9rem;
     font-weight: 400;
     color: $gray-600;
@@ -90,8 +90,14 @@ section, .page-section {
 
     .section-title {
         font-weight: 700;
-        margin-bottom: 1em;
+        margin-bottom: 0.5em;
         font-size: 3rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    section:first-of-type {
+        padding-top: 0;
     }
 }
 
@@ -122,16 +128,6 @@ section, .page-section {
     &:hover {
         text-decoration: underline;
         background-color: hsl(168, 48%, 68%);
-    }
-
-    &__icon {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
-        background-color: $light;
-        margin-right: 8px;
-        padding: 2px;
     }
 }
 
